--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-router-dom": "^4.3.1",
     "react-select": "^2.4.4",
     "serialize-javascript": "^1.9.1",
-    "url-search-params": "^1.1.0"
+    "url-search-params": "^1.1.0",
+    "source-map-support": "^0.5.16"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
